--- a/_config.yml
+++ b/_config.yml
@@ -96,12 +96,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "/shukla-yash"
+  github           : "shukla-yash"
   google_plus      :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "/in/yashshukla"
+  linkedin         : "yashshukla"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
