--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yash Shukla"
 title_separator          : "-"
 name                     : &name "Yash Shukla"
-description              : &description "personal description"
+description              : &description "About me"
 url                      : https://shukla-yash.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shukla-yash/shukla-yash.github.io"
