--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yash Shukla"
 title_separator          : "-"
 name                     : &name "Yash Shukla"
-description              : &description "About me"
+description              : &description "About"
 url                      : https://shukla-yash.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shukla-yash/shukla-yash.github.io"
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Yash Shukla"
   avatar           : "profile.png"
-  bio              : "Masters student,Robotics Engineering, WPI"
-  location         : "Worcester, MA"
-  employer         :
+  bio              : "PhD Student"
+  location         : "Medford, MA"
+  employer         : "Department of Computer Science, Tufts University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "yshukla@wpi.edu"
+  googlescholar    : "https://scholar.google.com/citations?user=gGhaE7gAAAAJ&hl=en"
+  email            : "yash.shukla@tufts.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
