--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Yash Shukla"
   avatar           : "profile.png"
   bio              : "PhD Student"
+  employer         : "Computer Science, Tufts University"
   location         : "Medford, MA"
-  employer         : "Department of Computer Science, Tufts University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=gGhaE7gAAAAJ&hl=en"
   email            : "yash.shukla@tufts.edu"
