--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "PhD Student"
   employer         : "Computer Science, Tufts University"
-  location         : "Medford, MA"
+  location         : "Medford, MA, USA"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=gGhaE7gAAAAJ&hl=en"
   email            : "yash.shukla@tufts.edu"
