--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /projects/
             
   - title: "CV"
-    url: /files/yash_cv.pdf
+    url: /files/Yash_CV.pdf
     
   - title: "Contact"
     url: /contact/
