--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yash Shukla"
-  avatar           : "profile.jpg"
+  avatar           : "webpage.jpg"
   bio              : "PhD Student"
   employer         : "Computer Science, Tufts University"
   location         : "Medford, MA, USA"
